--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "hosting": {
     "target": "firestore-a",
-    "public": "dist",
+    "public": "docs/site",
     "ignore": [
       "**/.*"
     ],
